add api to complete test
