# api/quiz_ms-test-openapi.yaml
@@ -303,6 +303,35 @@ paths:
             '*/*':
               schema:
                 $ref: "#/components/schemas/TestMcqAttemptResponse"
+  /v1/tests/{testId}/complete:
+    patch:
+      summary: "PATCH v1/tests/{testId}/complete"
+      operationId: "completeTest"
+      parameters:
+        - name: "testId"
+          in: "path"
+          required: true
+          schema:
+            type: "integer"
+            format: "int64"
+        - name: "x-user-id"
+          in: "header"
+          required: true
+          schema:
+            type: "string"
+        - name: "x-user-email"
+          in: "header"
+          required: true
+          schema:
+            type: "string"
+        - name: "x-user-roles"
+          in: "header"
+          required: true
+          schema:
+            type: "string"
+      responses:
+        "204":
+          description: "No Content"
 components:
   schemas:
     McqIndex:
